--- a/assets/scss/banners-promocionais-statico.scss
+++ b/assets/scss/banners-promocionais-statico.scss
@@ -10,12 +10,12 @@
 padding: 30px;
 
     .banners-promocionais-statico-12x {
-        @include banners-promocionais($rosa, '../images/parcele-em-12x.jpg')
+        @include banners-promocionais($rosa, '../images/parcele-em-12x.jpg');
 
     }
 
     .banners-promocionais-statico-todo-br {
-        @include banners-promocionais($roxo, '../images/entrega-para-todo-brasil.jpg')
+        @include banners-promocionais($roxo, '../images/entrega-para-todo-brasil.jpg');
     }
 
     .banners-promocionais-statico-12x,
